syntax = "proto3";
package gateway;

message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

message AddResponse {
  int32 result = 1;
}

service GatewayService {
  rpc Add (AddRequest) returns (AddResponse);
}

